<resources>
    <string name="app_name">My Application Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nano_degree_title">My Nano Degree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="my_app">Capstone: My App</string>

    <string name="launch_spotify">This will launch Spotify App!</string>
    <string name="launch_scores">This will launch Scores App!</string>
    <string name="launch_library">This will launch Library App!</string>
    <string name="launch_bigger">This will launch Build it Bigger App!</string>
    <string name="launch_reader">This will launch XYZ Reader App!</string>
    <string name="launch_app">This will launch my App!</string>
</resources>
