<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/app_name"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25sp"
                android:gravity="center"
                android:text="@string/my_nano_degree_title"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/buttonSpotifyStreamer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/spotify_streamer"
                    android:textSize="18sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/buttonScoresApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/scores_app"
                    android:textSize="18sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/buttonLibraryApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/library_app"
                    android:textSize="18sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/buttonBuildItBigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/build_it_bigger"
                    android:textSize="18sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/buttonXyzReader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/xyz_reader"
                    android:textSize="18sp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/colorAccent">

                <Button
                    android:id="@+id/buttonMyApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/my_app"
                    android:textSize="18sp"/>
            </FrameLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
